--- a/index.html
+++ b/index.html
@@ -3,7 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <script src="script.js"></script>
 </head>
+<h1>Привет</h1>
+<div>
+    <p>123</p>
+    <p>456</p>
+    <p>789</p>
+</div>
 <body>
 
 </body>
