--- a/index.html
+++ b/index.html
@@ -7,9 +7,17 @@
 </head>
 <h1>Привет</h1>
 <div>
-    <p>123</p>
-    <p>456</p>
-    <p>789</p>
+    <p>q456</p>
+    <p>q789</p>
+</div>
+<div>
+    <p>q123</p>
+    <p>q789</p>
+    <button onclick="test()">Click me</button>
+</div>
+<div>
+    <p>w456</p>
+    <p>w789</p>
 </div>
 <body>
 
