--- a/index.html
+++ b/index.html
@@ -18,13 +18,25 @@
 
 
 <div class="board">
-    <table class="chess-board">
+    <!--<table class="chess-board">
         <tr>
+            <th></th>
+            <th>a</th>
+            <th>b</th>
+            <th>c</th>
+            <th>d</th>
+            <th>e</th>
+            <th>f</th>
+            <th>g</th>
+            <th>h</th>
+        </tr>
+        <tr>
+            <th>8</th>
             <td class="white"></td>
             <td class="black"></td>
         </tr>
 
-    </table>
+    </table> -->
 </div>
 
 
