Урок 6. Реализован динамический вывод товаров и добавление товаров в корзину и верстка корзины html.

--- a/index.html
+++ b/index.html
@@ -7,29 +7,37 @@
     <script src="script.js"></script>
     <link rel="stylesheet" href="style.css">
 </head>
-<h1>Урок 5. Введение в DOM. Практическое задание. Шахматная доска</h1>
-
-<div class="js__target">
-    <button onclick="test()">Click me</button>
-    <button onclick="ViewBasket()">Корзина</button>
-    <button onclick="createCheessBoard()">Создать шахматную доску</button>
-
-</div>
-
-
-<div class="board">
-    <table class="chess-board">
-        <tr>
-            <td class="white"></td>
-            <td class="black"></td>
-        </tr>
-
-    </table>
-</div>
-
-
-
 <body>
+
+<h1>Урок 6. </h1>
+
+<main class="main-container">
+    <!--<div class="products">
+        <div class="product-item">
+            <h2>Брюки</h2>
+            <h3>250 Р.</h3>
+            <button class="incart">В Корзину</button>
+        </div>
+        <div class="product-item">
+            <h2>Брюки</h2>
+            <h3>250 Р.</h3>
+            <button class="incart">В Корзину</button>
+        </div>
+        <div class="product-item">
+            <h2>Брюки</h2>
+            <h3>250 Р.</h3>
+            <button class="incart">В Корзину</button>
+        </div>
+    </div>
+
+    <div class="cart">
+        <div class="cart-item">Штаны 5 р</div>
+        <div class="cart-item">Штаны 5 р</div>
+        <div class="cart-item">Штаны 5 р</div>
+        <div class="cart-item">Штаны 5 р</div>
+        <div class="cart-amount">20 р</div>
+    </div>-->
+</main>
 
 </body>
 
